# fintech-platform-webproject

fintech-platform-backend/: pyproject.toml
fintech-platform-backend/fintech_platform_backend/: app.py  main.py
fintech-platform-backend/tests/: test_app.py
