[tool.poetry]
name = "fintech-platform-backend"
version = "0.1.0"
description = ""
authors = ["Matheus Benediht <matheusbenediht@gmail.com>"]

[tool.taskipy.tasks]
run = 'py fintech_platform_backend/main.py'
test = 'pytest -s -x --cov=fintech_platform_backend -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts= '-p no:warnings'

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
pydantic = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
